--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -119,7 +119,7 @@
         margin-bottom: 0;
         margin-left: 6px;
         color: var(--font_title);
-        cursor: pointer;
+        cursor: default;
         letter-spacing: 1px;
         font-weight: bold;
         background: linear-gradient(to right, var(--mainColor) 50%, var(--font_title) 50%);
@@ -634,6 +634,7 @@
     <div v-show="uniqueListMode" class="overlayUniqueList">
         <nav>
             <p>Playlist Contents</p><p class="material-icons">view_list</p><p>|</p>
+            <p class="Title" style="margin-top:0; margin-right: 6px">{{uniqueList.length}} Video{{(uniqueList.length != 1) ? 's' : ''}}</p>
             <button @click="showListInput()" class="material-icons">playlist_add</button>
             <div v-show="inputListMode" class="inputList">
                 <input v-model="addPlayList" autocomplete="off" type="text" name="PlaylistIdUnqiue" placeholder="Playlist Id..." />
@@ -680,6 +681,7 @@
     <div v-show="trashbinMode" class="overlayUniqueList">
         <nav>
             <p>Removed Videos</p><p class="material-icons">view_list</p><p>|</p>
+            <p class="Title" style="margin-top:0;">{{oldVideos.length}} Video{{(oldVideos.length != 1) ? 's' : ''}}</p>
             <button @click="closeTrashbin" class="material-icons closeUniqueListButton">exit_to_app</button>
         </nav>
         <div class="scrollList">
