added frontend tags

--- a/SubBox/wwwroot/tutorial.html
+++ b/SubBox/wwwroot/tutorial.html
@@ -6,6 +6,23 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../css/brand-icons.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <title>SubBox - Introduction</title>
     <style>
         * {
@@ -29,7 +46,7 @@
             background-color: transparent;
             color: #131313;
             cursor: pointer;
-            vertical-align: central;      
+            vertical-align: central;
         }
 
         .refreshButton {
@@ -37,10 +54,10 @@
             transition: transform 1s;
         }
 
-        .refreshButton:hover {
-            transform: rotate(360deg);
-            transition: transform 1s;
-        }
+            .refreshButton:hover {
+                transform: rotate(360deg);
+                transition: transform 1s;
+            }
 
         img {
             height: 320px;
@@ -83,9 +100,9 @@
                 font-size: 20px;
             }
 
-            .miniSection a:hover {
-                color: #db4437;
-            }
+                .miniSection a:hover {
+                    color: #db4437;
+                }
 
         .Title {
             text-align: center;
@@ -127,20 +144,20 @@
                 justify-content: center;
             }
 
-            .EndDiv p a {
-                text-decoration: underline;
-                cursor: pointer;
-                font-size: 36px;
-                color: #db4437;
-                line-height: 48px;
-                display: flex;
-                align-items: center;
-            }
+                .EndDiv p a {
+                    text-decoration: underline;
+                    cursor: pointer;
+                    font-size: 36px;
+                    color: #db4437;
+                    line-height: 48px;
+                    display: flex;
+                    align-items: center;
+                }
 
-            .EndDiv p a:hover {
-                text-decoration: none;
-                color: #ff0000;
-            }
+                    .EndDiv p a:hover {
+                        text-decoration: none;
+                        color: #ff0000;
+                    }
 
         .miniLogo {
             height: 28px;
